adding auth and email details
